[gd_scene load_steps=4 format=3 uid="uid://ubu15aub8rei"]

[ext_resource type="Script" path="res://material_maker/widgets/size_option_button/size_option_button.gd" id="1_w6od6"]
[ext_resource type="Script" path="res://material_maker/panels/paint/scenes/new_project_panel.gd" id="1_ymfp0"]
[ext_resource type="PackedScene" uid="uid://rflulhsuy3ax" path="res://material_maker/widgets/float_edit/float_edit.tscn" id="2_s0j0j"]

[node name="NewProjectPanel" type="PanelContainer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -0.5
offset_right = 427.0
offset_bottom = 489.5
grow_vertical = 2
script = ExtResource("1_ymfp0")

[node name="Darken" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Darken"]
layout_mode = 2

[node name="Project" type="MarginContainer" parent="Darken/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="PanelContainer" parent="Darken/VBoxContainer/Project"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Darken/VBoxContainer/Project/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="Darken/VBoxContainer/Project/Panel/Margin"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="ModelFileLabel" type="Label" parent="Darken/VBoxContainer/Project/Panel/Margin/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 14
text = "Model:"

[node name="ModelFile" type="Button" parent="Darken/VBoxContainer/Project/Panel/Margin/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Model file"
clip_text = true

[node name="ProjectNameLabel" type="Label" parent="Darken/VBoxContainer/Project/Panel/Margin/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 14
text = "Project:"

[node name="ProjectName" type="TextEdit" parent="Darken/VBoxContainer/Project/Panel/Margin/GridContainer"]
clip_contents = false
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
placeholder_text = "Paint Project.mmpp"

[node name="Spacer3" type="MarginContainer" parent="Darken/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="HSeparator" type="HSeparator" parent="Darken/VBoxContainer/Spacer3"]
layout_mode = 2

[node name="Settings" type="MarginContainer" parent="Darken/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Darken/VBoxContainer/Settings"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Darken/VBoxContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="Darken/VBoxContainer/Settings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Paint settings:"

[node name="Panel" type="PanelContainer" parent="Darken/VBoxContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Grid" type="GridContainer" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="Resolution" type="HBoxContainer" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResolutionLabel" type="Label" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid/Resolution"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Paint textures resolution:"

[node name="Resolution" type="OptionButton" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid/Resolution"]
custom_minimum_size = Vector2(200, 26)
layout_mode = 2
size_flags_horizontal = 8
alignment = 1
script = ExtResource("1_w6od6")
min_size = 8
max_size = 12

[node name="PaintEmission" type="CheckBox" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 0
text = "Paint Emission"

[node name="PaintNormal" type="CheckBox" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Paint Normal"

[node name="PaintDepth" type="CheckBox" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid"]
layout_mode = 2
size_flags_horizontal = 0
text = "Paint Depth"

[node name="Bump" type="HBoxContainer" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid"]
layout_mode = 2

[node name="PaintBump" type="CheckBox" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid/Bump"]
layout_mode = 2
text = "Normals from depth"

[node name="BumpStrength" parent="Darken/VBoxContainer/Settings/VBoxContainer/Panel/Margin/Grid/Bump" instance=ExtResource("2_s0j0j")]
layout_mode = 2
step = 0.01
float_only = true

[node name="Spacer2" type="MarginContainer" parent="Darken/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="HSeparator" type="HSeparator" parent="Darken/VBoxContainer/Spacer2"]
layout_mode = 2

[node name="Optionals" type="MarginContainer" parent="Darken/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Darken/VBoxContainer/Optionals"]
layout_mode = 2

[node name="OptionalLabel" type="Label" parent="Darken/VBoxContainer/Optionals/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Optionals:"

[node name="Panel" type="PanelContainer" parent="Darken/VBoxContainer/Optionals/VBoxContainer"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Darken/VBoxContainer/Optionals/VBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="Darken/VBoxContainer/Optionals/VBoxContainer/Panel/Margin"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="ColorIdMapLabel" type="Label" parent="Darken/VBoxContainer/Optionals/VBoxContainer/Panel/Margin/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Choose a color ID map:"

[node name="ChooseFile" type="Button" parent="Darken/VBoxContainer/Optionals/VBoxContainer/Panel/Margin/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Choose file ..."
clip_text = true

[node name="Spacer" type="MarginContainer" parent="Darken/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="HSeparator" type="HSeparator" parent="Darken/VBoxContainer/Spacer"]
layout_mode = 2

[node name="ButtonBar" type="MarginContainer" parent="Darken/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Start" type="Button" parent="Darken/VBoxContainer/ButtonBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Start new project"
clip_text = true

[connection signal="pressed" from="Darken/VBoxContainer/Project/Panel/Margin/GridContainer/ModelFile" to="." method="_on_choose_model_pressed"]
[connection signal="pressed" from="Darken/VBoxContainer/Optionals/VBoxContainer/Panel/Margin/GridContainer/ChooseFile" to="." method="_on_choose_color_id_file_pressed"]
[connection signal="pressed" from="Darken/VBoxContainer/ButtonBar/Start" to="." method="_on_start_project_pressed"]
